...
      }
    },
    "About": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Add": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Apps for other devices": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Budget ID": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Copy to next week": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Create an invitation": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Delete": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Delete expense": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Groceries": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "How this works": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Learn more": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Leave a review": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Left to spend": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Manage": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Month": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Need help? Email me": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "New category": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Next": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "No category": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Previous": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Privacy": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Rename": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Save": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Share budget ID": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Spent this month": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Spent this week": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Tap a category to see its expenses.": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Today": {
      "extractionState": "manual",
      "localizations": {
...
